# sneha.a-Zomato

./: .gitignore  README.md  architecture.md  create_users_table.py  index.html  pyproject.toml  setup_test_db.sh  spec.md
app/: database.py  database_sqlite.py  main.py
app/models/: menu_item.py  orders.py  resturants.py  users.py
app/routes/: menu.py  orders.py  resturants.py  upload.py  users.py
app/schemas/: menu_item.py  order.py  restaurant.py  user.py
app/utils/: auth.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Menu.tsx  Orders.tsx  OwnerDashboard.tsx  Payments.tsx  Register.tsx  RestaurantSetup.tsx  Restaurants.tsx
frontend/tests/: Auth.test.tsx  Menu.test.tsx  Order.test.tsx  setup.ts
migrations/: initial.sql
tests/: test_auth.py  test_menu.py  test_restaurant.py  test_root.py
zomato_clone/: package-lock.json  package.json
zomato_clone_frontend/: package-lock.json  package.json
